# 2DFT-Implementations

ECE6122-Final-Project/: CMakeLists.txt  README.md  Tower1024.txt  Tower128.txt  Tower256.txt  Tower512.txt  test4.txt
ECE6122-Final-Project/p31/: CMakeLists.txt
ECE6122-Final-Project/p31/src/: ThreadMain.cc  complex.cc  input_image.cc
ECE6122-Final-Project/p32/: CMakeLists.txt
ECE6122-Final-Project/p32/src/: 2d_fft.cpp  2d_fft_trials.cpp  2dfft_mpi.cpp  complex.cc  complex.h  input_image.cc
ECE6122-Final-Project/p33/: CMakeLists.txt
ECE6122-Final-Project/p33/src/: complex.cc  complex.cu  complex.cuh  complex.h  complexCUDA.cuh  input_image.cuh  input_image.h  main.cu  main2.cu
